--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,17 +1,18 @@
 workflows:
   expo-android:
     name: Expo Android Build
+    max_build_duration: 60
     environment:
       node: latest
       npm: latest
       vars:
-        EXPO_TOKEN: $EXPO_TOKEN
+        EXPO_TOKEN: $EXPO_TOKEN   # EXPO_TOKEN kaaga ee Codemagic Environment variable
     scripts:
       - name: Install dependencies
         script: |
           npm install -g eas-cli
           npm install
-      - name: Build APK
+      - name: Build APK with EAS
         script: |
           eas build --platform android --non-interactive --profile preview --group amiinhob
     artifacts:
